# Clausura

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  action.yml  guide.md  install.sh
.githooks/: pre-commit
.github/workflows/: main.yml  pr.yml  release.yml
crates/clausura-cli/: Cargo.toml
crates/clausura-cli/src/: main.rs
crates/clausura-cli/src/commands/: mod.rs  run.rs  snapshot.rs
crates/clausura-cli/tests/: cli_tests.rs
crates/clausura-core/: Cargo.toml  build.rs
crates/clausura-core/src/: agent.rs  build_info.rs  checkpoint.rs  ci.rs  config.rs  context.rs  executor.rs  lib.rs  logging.rs  provider.rs  rules.rs  sarif.rs  snapshot.rs  tools.rs  types.rs
crates/clausura-core/tests/: integration_test.rs
