[package]
name = "clausura-cli"
version = "1.0.0"
edition = "2021"

[dependencies]
clausura-core = { path = "../clausura-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
colored = "2"
atty = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "clausura"
path = "src/main.rs"
