[package]
name = "clausura-core"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
wiremock = "0.6"
