[package]
name = "clausura-core"
version = "1.0.2"
edition = "2021"
description = "Core library for Clausura — a CI-native agent for deterministic pipeline gating"
license = "MIT"
repository = "https://github.com/liuyanghejerry/Clausura"
readme = "../../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
async-trait = "0.1"
serde_yaml = "0.9"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tiktoken-rs = "0.5"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
rmp-serde = "1"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt", "time"] }
tracing-appender = "0.2"
regex-lite = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
wiremock = "0.6"
